Fix Airflow 3.x user creation
- Use SimpleAuthManager instead of CLI user creation
- Configure admin user in airflow.cfg
- Remove CLI user creation from entrypoint.sh

--- a/docker/airflow/config/airflow.cfg
+++ b/docker/airflow/config/airflow.cfg
@@ -17,3 +17,6 @@ scheduler_heartbeat_sec = 5
 
 [logging]
 logging_level = INFO
+
+[simple_auth_manager]
+simple_auth_manager_users = admin:admin:admin@example.com:Admin:User
