--- a/docker/airflow/config/airflow.cfg
+++ b/docker/airflow/config/airflow.cfg
@@ -3,7 +3,7 @@ dags_folder = /opt/airflow/dags
 base_log_folder = /opt/airflow/logs
 execute_tasks_new_python_interpreter = True
 load_examples = False
-simple_auth_manager_all_admins = True
+simple_auth_manager_all_admins = "True"
 
 [database]
 sql_alchemy_conn = sqlite:////opt/airflow/airflow.db
