--- a/docker/postgresql/config/pgbouncer.ini
+++ b/docker/postgresql/config/pgbouncer.ini
@@ -2,15 +2,15 @@
 * = host=localhost port=5432
 
 [pgbouncer]
-listen_addr = 0.0.0.0
-listen_port = 6432
-auth_type = md5
+listen_addr = ${PGBOUNCER_LISTEN_ADDR}
+listen_port = ${PGBOUNCER_LISTEN_PORT}
+auth_type = ${PGBOUNCER_AUTH_TYPE}
 auth_file = /etc/pgbouncer/userlist.txt
-admin_users = postgres
-stats_users = postgres
-pool_mode = transaction
-max_client_conn = 100
-default_pool_size = 20
+admin_users = ${PGBOUNCER_ADMIN_USERS}
+stats_users = ${PGBOUNCER_STATS_USERS}
+pool_mode = ${PGBOUNCER_POOL_MODE}
+max_client_conn = ${PGBOUNCER_MAX_CLIENT_CONN}
+default_pool_size = ${PGBOUNCER_DEFAULT_POOL_SIZE}
 logfile = /var/log/pgbouncer/pgbouncer.log
 pidfile = /var/run/pgbouncer/pgbouncer.pid
 user = postgres
