feat(docker): enhance Dockerfile with build metadata and optimize cleanup script for runtime libraries

--- a/docker/wordpress/apache/Dockerfile
+++ b/docker/wordpress/apache/Dockerfile
@@ -1,4 +1,6 @@
-FROM debian:bookworm
+# Multi-stage build for WordPress with optimized layer caching
+# syntax=docker/dockerfile:1.4
+FROM debian:bookworm AS base
 
 ARG WORDPRESS_VERSION="6.8.2"
 ARG APACHE_VERSION="2.4.65"
@@ -7,18 +9,36 @@ ARG APR_VERSION="1.7.6"
 ARG APR_UTIL_VERSION="1.6.3"
 ARG APACHE_EXPORTER_VERSION="1.0.10"
 
-# Copy all setup scripts and resources
+# Build metadata
+ARG BUILD_DATE
+ARG VCS_REF
+
+LABEL org.opencontainers.image.created=$BUILD_DATE \
+    org.opencontainers.image.revision=$VCS_REF \
+    org.opencontainers.image.title="WordPress with Apache and PHP" \
+    org.opencontainers.image.description="Optimized WordPress container with Apache, PHP, and monitoring" \
+    org.opencontainers.image.authors="Supan Adit Pratama <email@supanadit.com>"
+
+# Setup layer - copy stable files first for better caching
+FROM base AS setup
+
+# Copy setup scripts and configuration (stable files that change infrequently)
 COPY setup.sh /opt/setup.sh
 COPY setup/ /opt/setup/
 
-# Set working directory
-WORKDIR /var/www/html
-
-# Run the complete setup in a single layer
-RUN chmod +x /opt/setup.sh && \
+# Run the complete setup in a single layer with BuildKit cache mounts
+RUN --mount=type=cache,target=/var/cache/apt \
+    --mount=type=cache,target=/var/lib/apt \
+    chmod +x /opt/setup.sh && \
     /opt/setup.sh && \
     rm /opt/setup.sh && \
     rm -rf /opt/setup
+
+# Runtime layer - copy volatile files later
+FROM setup AS runtime
+
+# Set working directory
+WORKDIR /var/www/html
 
 COPY addons.sh /opt/addons.sh
 COPY addons/ /opt/addons/
@@ -34,6 +54,9 @@ RUN chmod +x /opt/addons.sh && \
 # Copy entrypoint script
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+
+# Set the stop signal for proper container shutdown
+STOPSIGNAL SIGTERM
 
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["/usr/local/apache2/bin/httpd", "-D", "FOREGROUND"]
