Add initialization scripts for Apache and WordPress configuration
- Introduced 08-apache-status.sh to configure Apache server status with optional public access.
- Added 09-apache-exporter.sh to set up Apache exporter for monitoring, ensuring server-info access.
- Created 10-htaccess.sh to manage .htaccess file for WordPress, including protection for xmlrpc.php and wp-config.php.
- Implemented 11-permissions.sh to set appropriate file and directory permissions for WordPress.
- Added utility scripts for logging, validation, and WordPress-specific functions.
- Removed the old entrypoint.sh script, consolidating functionality into modular scripts for better maintainability.

--- a/docker/wordpress/apache/Dockerfile
+++ b/docker/wordpress/apache/Dockerfile
@@ -52,12 +52,12 @@ RUN chmod +x /opt/addons.sh && \
     rm -rf /opt/addons
 
 # Copy entrypoint script
-COPY entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
+COPY entrypoint.d /opt/container/entrypoint.d
+RUN find /opt/container/entrypoint.d -name "*.sh" -exec chmod +x {} \;
 
 # Set the stop signal for proper container shutdown
 STOPSIGNAL SIGTERM
 
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/opt/container/entrypoint.d/entrypoint.sh"]
 CMD ["/usr/local/apache2/bin/httpd", "-D", "FOREGROUND"]
 EXPOSE 80 9117
