feat(mariadb): enhance entrypoint script to ensure mysql user creation and streamline database initialization

--- a/docker/mariadb/Dockerfile
+++ b/docker/mariadb/Dockerfile
@@ -29,6 +29,8 @@ RUN --mount=type=cache,target=/var/cache/apt \
     rm /opt/setup.sh && \
     rm -rf /opt/setup/
 
+ENV PATH="/usr/local/mariadb/bin:$PATH"
+
 # Runtime layer - copy volatile files later
 FROM setup AS runtime
 # Create postgres user for security (already created in setup stage)
