--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -37,30 +37,11 @@ jobs:
           CONTAINER=${{ steps.extract.outputs.container }}
           VARIANT=${{ steps.extract.outputs.variant }}
           if [ "$CONTAINER" = "postgresql" ]; then
-            MATRIX=$(cat <<'EOF'
-          [
-            {
-              "version": "13.22",
-              "postgresql_version": "13.22",
-              "citus_version": "11.3.1",
-              "patroni_version": "v3.0.2"
-            }
-          ]
-          EOF
-          )
+            MATRIX='[{"version": "13.22", "postgresql_version": "13.22", "citus_version": "11.3.1", "patroni_version": "v3.0.2"}]'
             CONTEXT="docker/postgresql"
           elif [ "$CONTAINER" = "wordpress" ]; then
             if [ "$VARIANT" = "apache" ]; then
-              MATRIX=$(cat <<'EOF'
-            [
-              {
-                "version": "6.8.3",
-                "wordpress_version": "6.8.3",
-                "php_version": "8.2"
-              }
-            ]
-            EOF
-            )
+              MATRIX='[{"version": "6.8.3", "wordpress_version": "6.8.3", "php_version": "8.2"}]'
               CONTEXT="docker/wordpress/apache"
             else
               MATRIX='[{"version": "latest"}]'
