fix: add source label to Dockerfile for PostgreSQL and WordPress

--- a/docker/postgresql/Dockerfile
+++ b/docker/postgresql/Dockerfile
@@ -18,7 +18,8 @@ LABEL org.opencontainers.image.created=$BUILD_DATE \
     org.opencontainers.image.revision=$VCS_REF \
     org.opencontainers.image.title="PostgreSQL with Build Optimization" \
     org.opencontainers.image.description="Optimized PostgreSQL container with Patroni, pgBackRest, and Citus" \
-    org.opencontainers.image.authors="Supan Adit Pratama <email@supanadit.com>"
+    org.opencontainers.image.authors="Supan Adit Pratama <email@supanadit.com>" \
+    org.opencontainers.image.source=https://github.com/supanadit/containers
 
 ENV PG_CONFIG=/usr/local/pgsql/bin/pg_config
 
