--- a/docker/mariadb/Dockerfile
+++ b/docker/mariadb/Dockerfile
@@ -12,7 +12,8 @@ LABEL org.opencontainers.image.created=$BUILD_DATE \
     org.opencontainers.image.revision=$VCS_REF \
     org.opencontainers.image.title="MariaDB" \
     org.opencontainers.image.description="Optimized MariaDB container" \
-    org.opencontainers.image.authors="Supan Adit Pratama <email@supanadit.com>"
+    org.opencontainers.image.authors="Supan Adit Pratama <email@supanadit.com>" \
+    org.opencontainers.image.source=https://github.com/supanadit/containers
 
 # Setup layer - copy stable files first for better caching
 FROM base AS setup
