fix: add pgaudit extension installation and verification to PostgreSQL setup script

--- a/docker/postgresql/Dockerfile
+++ b/docker/postgresql/Dockerfile
@@ -3,6 +3,7 @@
 FROM debian:bookworm AS base
 
 ARG POSTGRESQL_VERSION=13.5
+ARG PGAUDIT_VERSION=1.5.3
 ARG PGBACKREST_VERSION=2.56.0
 ARG CITUS_VERSION=11.3.1
 ARG PG_STAT_MONITOR_VERSION=2.2.0
