feat(postgresql): add HypoPG installation script to PostgreSQL setup

--- a/docker/postgresql/Dockerfile
+++ b/docker/postgresql/Dockerfile
@@ -10,6 +10,7 @@ ARG PG_STAT_MONITOR_VERSION=2.2.0
 ARG DECODERBUFS_VERSION=v3.2.2.Final
 ARG PYTHON_VERSION=v3.11.2
 ARG PATRONI_VERSION=v3.0.2
+ARG HYPO_PG_VERSION=1.4.2
 
 # Build metadata
 ARG BUILD_DATE
