--- a/docker/postgresql/Dockerfile
+++ b/docker/postgresql/Dockerfile
@@ -11,6 +11,7 @@ ARG DECODERBUFS_VERSION=v3.2.2.Final
 ARG PYTHON_VERSION=v3.11.2
 ARG PATRONI_VERSION=v3.0.2
 ARG HYPO_PG_VERSION=1.4.2
+ARG DEXTER_VERSION=v0.6.3
 
 # Build metadata
 ARG BUILD_DATE
