feat(postgresql): add pgmetrics installation script to PostgreSQL setup

--- a/docker/postgresql/Dockerfile
+++ b/docker/postgresql/Dockerfile
@@ -12,6 +12,7 @@ ARG PYTHON_VERSION=v3.11.2
 ARG PATRONI_VERSION=v3.0.2
 ARG HYPO_PG_VERSION=1.4.2
 ARG DEXTER_VERSION=v0.6.3
+ARG PGMETRICS_VERSION=1.18.0
 
 # Build metadata
 ARG BUILD_DATE
