feat(postgresql): add pg_repack and bump patroni to latest version by default

--- a/docker/postgresql/Dockerfile
+++ b/docker/postgresql/Dockerfile
@@ -8,11 +8,12 @@ ARG PGBACKREST_VERSION=2.56.0
 ARG CITUS_VERSION=11.3.1
 ARG PG_STAT_MONITOR_VERSION=2.2.0
 ARG DECODERBUFS_VERSION=v3.2.2.Final
-ARG PYTHON_VERSION=v3.11.2
-ARG PATRONI_VERSION=v3.0.2
+ARG PYTHON_VERSION=v3.13.9
+ARG PATRONI_VERSION=v4.1.0
 ARG HYPO_PG_VERSION=1.4.2
 ARG DEXTER_VERSION=v0.6.3
 ARG PGMETRICS_VERSION=1.18.0
+ARG PGREPACK_VERSION=1.5.3
 
 # Build metadata
 ARG BUILD_DATE
