--- a/docker/grafana-mimir/Dockerfile
+++ b/docker/grafana-mimir/Dockerfile
@@ -4,7 +4,6 @@ ARG GRAFANA_MIMIR_VERSION="2.17.1"
 
 COPY setup.sh /opt/setup.sh
 COPY setup/ /opt/setup/
-COPY config/mimir.yaml /etc/mimir-sample.yaml
 
 # Run the complete setup in a single layer
 RUN chmod +x /opt/setup.sh && \
@@ -14,8 +13,14 @@ RUN chmod +x /opt/setup.sh && \
 
 WORKDIR /opt/grafana
 
-# Copy entrypoint script
-COPY entrypoint.sh /opt/grafana/entrypoint.sh
-RUN chmod +x /opt/grafana/entrypoint.sh
+# Copy entrypoint scripts (volatile files that change frequently during development)
+COPY entrypoint.d/ /opt/container/entrypoint.d/
 
-ENTRYPOINT ["/opt/grafana/entrypoint.sh"]
+# Ensure all scripts in entrypoint.d are executable
+RUN chmod -R +x /opt/container/entrypoint.d/
+
+# Copy main entrypoint script
+COPY entrypoint.d/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
