--- a/.github/workflows/build-and-publish-mariadb.yml
+++ b/.github/workflows/build-and-publish-mariadb.yml
@@ -1,4 +1,4 @@
-name: Build and Publish Thanos Container
+name: Build and Publish MariaDB Container
 permissions:
   contents: read
   packages: write
@@ -10,46 +10,57 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.release.tag_name, 'thanos-')
+    if: startsWith(github.event.release.tag_name, 'mariadb-')
     outputs:
       container: ${{ steps.extract.outputs.container }}
       revision: ${{ steps.extract.outputs.revision }}
+      matrix: ${{ steps.versions.outputs.matrix }}
       context: ${{ steps.versions.outputs.context }}
-      version: ${{ steps.extract.outputs.version }}
     steps:
-      - name: Extract container, version and revision
+      - name: Extract container and revision
         id: extract
         run: |
           TAG=${{ github.event.release.tag_name }}
           IFS='-' read -ra parts <<< "$TAG"
           CONTAINER=${parts[0]}
-          if [ ${#parts[@]} -eq 3 ]; then
-            VERSION=${parts[1]}
-            REVISION=${parts[2]}
+          if [ ${#parts[@]} -eq 2 ]; then
+            REVISION=${parts[1]}
           else
-            echo "Invalid tag format for Thanos. Expected: thanos-<version>-<revision>"
+            echo "Invalid tag format for MariaDB. Expected: mariadb-<revision>"
             exit 1
           fi
           echo "container=$CONTAINER" >> $GITHUB_OUTPUT
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "revision=$REVISION" >> $GITHUB_OUTPUT
 
-      - name: Set context for Thanos
+      - name: Set matrix and context for MariaDB
         id: versions
         run: |
-          CONTEXT="docker/thanos"
+          MATRIX='[{"version": "11.8.3", "mariadb_version": "11.8.3"}]'
+          CONTEXT="docker/mariadb"
+          echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
           echo "context=$CONTEXT" >> $GITHUB_OUTPUT
 
   build:
     needs: setup
     if: github.event.release.target_commitish == 'main'
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include: ${{ fromJSON(needs.setup.outputs.matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Set image tag
+        id: tag
+        run: |
+          VERSION=${{ matrix.version }}
+          REVISION=${{ needs.setup.outputs.revision }}
+          TAG="$VERSION-$REVISION"
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -64,7 +75,7 @@ jobs:
           context: ${{ needs.setup.outputs.context }}
           push: true
           build-args: |
-            THANOS_VERSION=${{ needs.setup.outputs.version }}
-          tags: ghcr.io/${{ github.repository_owner }}/containers/${{ needs.setup.outputs.container }}:${{ needs.setup.outputs.version }}-${{ needs.setup.outputs.revision }}
+            MARIADB_VERSION=${{ matrix.mariadb_version }}
+          tags: ghcr.io/${{ github.repository_owner }}/containers/${{ needs.setup.outputs.container }}:${{ steps.tag.outputs.tag }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
