--- a/.github/workflows/build-and-publish-thanos.yml
+++ b/.github/workflows/build-and-publish-thanos.yml
@@ -6,12 +6,11 @@ permissions:
 on:
   push:
     tags:
-      - 'thanos-*'
+      - "thanos-*"
 
 jobs:
   setup:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.release.tag_name, 'thanos-')
     outputs:
       container: ${{ steps.extract.outputs.container }}
       revision: ${{ steps.extract.outputs.revision }}
