--- a/.github/workflows/build-and-publish-prometheus.yml
+++ b/.github/workflows/build-and-publish-prometheus.yml
@@ -6,12 +6,11 @@ permissions:
 on:
   push:
     tags:
-      - 'prometheus-*'
+      - "prometheus-*"
 
 jobs:
   setup:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.release.tag_name, 'prometheus-')
     outputs:
       container: ${{ steps.extract.outputs.container }}
       revision: ${{ steps.extract.outputs.revision }}
