fix(workflow): update tag extraction to use github.ref_name and standardize tag quotes for MariaDB, MinIO, PostgreSQL, Thanos, and WordPress builds

--- a/.github/workflows/build-and-publish-mariadb.yml
+++ b/.github/workflows/build-and-publish-mariadb.yml
@@ -6,12 +6,11 @@ permissions:
 on:
   push:
     tags:
-      - 'mariadb-*'
+      - "mariadb-*"
 
 jobs:
   setup:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.release.tag_name, 'mariadb-')
     outputs:
       container: ${{ steps.extract.outputs.container }}
       revision: ${{ steps.extract.outputs.revision }}
@@ -21,7 +20,7 @@ jobs:
       - name: Extract container and revision
         id: extract
         run: |
-          TAG=${{ github.event.release.tag_name }}
+          TAG=${{ github.ref_name }}
           IFS='-' read -ra parts <<< "$TAG"
           CONTAINER=${parts[0]}
           if [ ${#parts[@]} -eq 2 ]; then
