--- a/.github/workflows/build-and-publish-thanos.yml
+++ b/.github/workflows/build-and-publish-thanos.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Extract container, version and revision
         id: extract
         run: |
-          TAG=${{ github.event.release.tag_name }}
+          TAG=${{ github.ref_name }}
           IFS='-' read -ra parts <<< "$TAG"
           CONTAINER=${parts[0]}
           if [ ${#parts[@]} -eq 3 ]; then
@@ -42,7 +42,6 @@ jobs:
 
   build:
     needs: setup
-    if: github.event.release.target_commitish == 'main'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
