--- a/.github/workflows/build-and-publish-postgresql.yml
+++ b/.github/workflows/build-and-publish-postgresql.yml
@@ -6,12 +6,11 @@ permissions:
 on:
   push:
     tags:
-      - 'postgresql-*'
+      - "postgresql-*"
 
 jobs:
   setup:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.release.tag_name, 'postgresql-')
     outputs:
       container: ${{ steps.extract.outputs.container }}
       revision: ${{ steps.extract.outputs.revision }}
@@ -21,7 +20,7 @@ jobs:
       - name: Extract container and revision
         id: extract
         run: |
-          TAG=${{ github.event.release.tag_name }}
+          TAG=${{ github.ref_name }}
           IFS='-' read -ra parts <<< "$TAG"
           CONTAINER=${parts[0]}
           if [ ${#parts[@]} -eq 2 ]; then
@@ -43,7 +42,6 @@ jobs:
 
   build:
     needs: setup
-    if: github.event.release.target_commitish == 'main'
     runs-on: ubuntu-latest
     strategy:
       matrix:
