refactor: add metadata labels to Grafana Dockerfiles for improved documentation

--- a/docker/grafana-pyroscope/Dockerfile
+++ b/docker/grafana-pyroscope/Dockerfile
@@ -2,6 +2,17 @@ FROM debian:bookworm
 
 ARG GRAFANA_PYROSCOPE_VERSION="1.16.0"
 
+# Build metadata
+ARG BUILD_DATE
+ARG VCS_REF
+
+LABEL org.opencontainers.image.created=$BUILD_DATE \
+    org.opencontainers.image.revision=$VCS_REF \
+    org.opencontainers.image.title="Grafana Pyroscope" \
+    org.opencontainers.image.description="Optimized Grafana Pyroscope container for continuous profiling" \ 
+    org.opencontainers.image.authors="Supan Adit Pratama <email@supanadit.com>" \
+    org.opencontainers.image.source=https://github.com/supanadit/containers
+
 COPY setup.sh /opt/setup.sh
 COPY setup/ /opt/setup/
 
