--- a/docker/grafana-loki/Dockerfile
+++ b/docker/grafana-loki/Dockerfile
@@ -2,6 +2,17 @@ FROM debian:bookworm
 
 ARG GRAFANA_LOKI_VERSION="3.5.3"
 
+# Build metadata
+ARG BUILD_DATE
+ARG VCS_REF
+
+LABEL org.opencontainers.image.created=$BUILD_DATE \
+    org.opencontainers.image.revision=$VCS_REF \
+    org.opencontainers.image.title="Grafana Loki" \
+    org.opencontainers.image.description="Optimized Grafana Loki container for log aggregation and management" \
+    org.opencontainers.image.authors="Supan Adit Pratama <email@supanadit.com>" \
+    org.opencontainers.image.source=https://github.com/supanadit/containers
+
 COPY setup.sh /opt/setup.sh
 COPY setup/ /opt/setup/
 
