--- a/docker/grafana-tempo/Dockerfile
+++ b/docker/grafana-tempo/Dockerfile
@@ -2,6 +2,17 @@ FROM debian:bookworm
 
 ARG GRAFANA_TEMPO_VERSION="2.8.2"
 
+# Build metadata
+ARG BUILD_DATE
+ARG VCS_REF
+
+LABEL org.opencontainers.image.created=$BUILD_DATE \
+    org.opencontainers.image.revision=$VCS_REF \
+    org.opencontainers.image.title="Grafana Tempo" \
+    org.opencontainers.image.description="Optimized Grafana Tempo container for distributed tracing" \
+    org.opencontainers.image.authors="Supan Adit Pratama <email@supanadit.com>" \
+    org.opencontainers.image.source=https://github.com/supanadit/containers
+
 COPY setup.sh /opt/setup.sh
 COPY setup/ /opt/setup/
 
