feat: add pg_cron extension support by default
I need pg_cron, so maybe someone else too.

--- a/docker/postgresql/Dockerfile
+++ b/docker/postgresql/Dockerfile
@@ -14,6 +14,7 @@ ARG HYPO_PG_VERSION=1.4.2
 ARG DEXTER_VERSION=v0.6.3
 ARG PGMETRICS_VERSION=1.18.0
 ARG PGREPACK_VERSION=1.5.3
+ARG PG_CRON_VERSION=1.6.7
 
 # Build metadata
 ARG BUILD_DATE
